fix navbar overlapping issues

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -14,6 +14,10 @@ code {
     height: auto;
 }
 
+.page-content-wrapper {
+    padding-top: 54px;
+}
+
 .image.experience-screenshots {
     border: 1px solid black;
     box-shadow: 0px 0px 40px -25px rgba(0, 0, 0, .4);
@@ -28,7 +32,6 @@ code {
         padding: 5px;
     }
 }
-
 
 .header {
     opacity: 1;
